# py-collapse

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main
src/: io.cpp  io.hpp  main.cpp  mesh.cpp  mesh.hpp  pairs.cpp  pairs.hpp  quadrics.hpp  types.hpp  utils.cpp  utils.hpp
